# TestGraph

./: CMakeLists.txt  dialoghistory.cpp  dialoghistory.h  dialoghistory.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  undocommands.cpp  undocommands.h
customgraph/: customgraph.cpp  customgraph.h
qcustomplot/: CMakeLists.txt
